Updated Java opts for JDK 11